fix for sample CAS login button in options jumping when clicked (conflict between wordpress button style and wp options form-table styles.

--- a/assets/css/authorizer.css
+++ b/assets/css/authorizer.css
@@ -311,6 +311,15 @@ body.toplevel_page_authorizer .spinner .spinner-text {
 }
 
 
+/* Override a strange WordPress style that causes text to jump */
+.form-table td .button-primary.active,
+.form-table td .button-primary:active,
+.form-table td .button-primary:focus,
+.form-table td .button-primary:hover {
+  vertical-align: baseline;
+}
+
+
 @font-face {
   font-family: 'Glyphicons Halflings';
 
